Dodanie komentarzy z planem strony

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Home Page</h1>
-    </div>
+<!--    Moje zdjęcie wraz z którką informacją kim jestem-->
+<!--    Sekcja z doświadczeniem (timeline)-->
+<!--    Sekcja z projektami - github-->
+<!--    Stopka z danymi kontaktowymi-->
 </body>
 
 </html>
