--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" href="./resources/css/app.css">
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+<body class="h-screen bg-gray-50">
+    <article class="prose mx-auto px-4 py-8 h-full bg-white">
+        <h1>Hello world!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem porro molestiae in dolorum corrupti explicabo officia consequuntur at ea illo iste laboriosam asperiores, tenetur quia earum a sunt. Nemo, cupiditate.</p>
+    </article>
 </body>
 </html>
