Moved index.html to root dir, rename docs to build

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="Michał Pniak | Portfolio">
     <meta property="twitter:description" content="Od 2020 roku pracuję jako PHP Developer. Jestem absolwentem technikum o profilu informatycznym.">
 
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="./build/css/app.css">
     <script src="https://kit.fontawesome.com/fc9b67aed1.js" crossorigin="anonymous"></script>
 </head>
 <body class="px-12 mx-auto mt-8 md:px-24 md:mt-12 xl:w-[1200px]">
